tests/baselines/reference/moduleAssignmentCompat3.errors.txt
moduleAssignmentCompat3.ts(8,8): error TS2709: Cannot use namespace 'A' as a type.
moduleAssignmentCompat3.ts(9,8): error TS2709: Cannot use namespace 'B' as a type.


==== moduleAssignmentCompat3.ts (2 errors) ====
    module A {
        export var x = 1;
    }
    module B {
        export var x = "";
    }
    
    var a: A;
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    var b: B;
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    // both errors
    a = b;
    b = a;
    